--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.28",
+    "@expo/metro-runtime": "~3.2.3",
+    "@react-native-community/hooks": "^3.0.0",
+    "expo": "~51.0.38",
     "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-native": "^0.75.4",
+    "react-native-safe-area-context": "^4.11.1",
+    "react-native-status-bar-height": "^2.6.0",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.25.8"
   },
   "private": true
 }
